--- a/_config.yml
+++ b/_config.yml
@@ -22,9 +22,9 @@ repository               : "yyh-sjtu/yyh-sjtu.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : "Yunhao Zhou"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
+  bio              : "Applying for Phd"
   location         : "CN"
   employer         : "Shanghai Jiao Tong Univerisity"
   uri              : # URL
