--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ author:
   location         : "CN"
   employer         : "Shanghai Jiao Tong Univerisity"
   uri              : # URL
-  email            : "yyhnjsh@gmail.com" 
+  email            : "zyheesjtu@sjtu.edu.cn" 
 
   # Academic websites
   # arxiv            : # URL - Update with the correct link to your profile
