--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   name             : "Yunhao Zhou"
   pronouns         : # example: "she/her"  
   bio              : "Applying for Phd"
-  location         : "CN"
+  location         : "Shanghai, China"
   employer         : "Shanghai Jiao Tong Univerisity"
   uri              : # URL
   email            : "zyheesjtu@sjtu.edu.cn" 
