--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,9 @@
 
 # Basic Site Settings
 locale                   : "en-cn"
-title                    : "Cloud Zhou's page"
+title                    : "Yunhao Zhou's page"
 title_separator          : "-"
-name                     : &name "Cloud Zhou"
+name                     : &name "Yunhao Zhou"
 description              : &description "personal description"
 url                      : https://yyh-sjtu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
