--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Yunhao Zhou"
   pronouns         : # example: "she/her"  
-  bio              : "PhD candidate at CUHK (2025-)"
+  bio              : "PhD Student at CUHK (2025-)"
   location         : "Shanghai, China"
   employer         : "Shanghai Jiao Tong Univerisity"
   uri              : # URL
